test/parsing/errors/typeCannotImplementInterface.chpl
interface MyInterface {
}

proc foo() where true implements MyInterface {
  writeln();
}
